jira/azuredeploy-vpc.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]"
        },
        "jumpboxVmSize": {
            "type": "string",
            "defaultValue": "Standard_B1s",
            "metadata": {
                "description": "The size of the virtual machine used for the jumpbox/bastion host."
            }
        },
        "jumpboxSshKey": {
            "type": "string",
            "metadata": {
                "description": "The public key for the jumpbox SSH user"
            }
        },
        "jumpboxSshUser": {
            "type": "string",
            "defaultValue": "jiraadmin",
            "metadata": {
                "description": "The username used to SSH into the jumpbox."
            }
        }
    },
    "variables": {
        "namespace": "jira",
        "tags": {
            "vendor": "Atlassian",
            "product": "JIRA",
            "provider": "2F0AF47A-92C7-413A-9009-C3815BFF7AF6"
        },
        "vnet": {
            "name": "[concat(variables('namespace'), 'vnet')]",
            "prefix": "10.0.0.0/16"
        },
        "gtwySubnet": {
            "name": "[concat(variables('namespace'), 'appgwsubnet')]",
            "prefix": "10.0.1.0/24"
        },
        "appSubnet": {
            "name": "[concat(variables('namespace'), 'cluster', 'subnet')]",
            "prefix": "10.0.2.0/24",
            "nsg": {
                "name": "[concat(variables('namespace'), 'cluster', 'nsg')]"
            }
        },
        "jumpbox": {
            "name": "[concat(variables('namespace'), 'jumpbox')]",
            "nsg": {
                "name": "[concat(variables('namespace'), 'jumpbox', 'nsg')]"
            },
            "vm": {
                "size": "[parameters('jumpboxVmSize')]",
                "user": "[parameters('jumpboxSshUser')]",
                "key": "[parameters('jumpboxSshKey')]",
                "image": {
                    "publisher": "Canonical",
                    "offer": "UbuntuServer",
                    "sku": "16.04-LTS",
                    "version": "latest"
                },
                "disk": {
                    "name": "[concat(variables('namespace'), 'jumpbox', 'osdisk')]",
                    "type": "Standard_LRS"
                }
            },
            "ip": {
                "address": "10.0.2.99",
                "name": "[concat(variables('namespace'), '-jumpboxip-', uniqueString(resourceGroup().id))]"
            },
            "subnet": {
                "name": "[concat(variables('namespace'), 'jumpboxsubnet')]",
                "prefix": "10.0.3.0/24"
            },
            "nics": {
                "public": "[concat(variables('namespace'), 'jumpbox', 'nic', 'public')]",
                "private": "[concat(variables('namespace'), 'jumpbox', 'nic', 'private')]"
            }
        },
        "routing": {
            "outbound": {
                "name": "[concat(variables('namespace'), 'routes', 'outbound')]"
            }
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "name": "[variables('appSubnet').nsg.name]",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses', '/', variables('jumpbox').ip.name)]"
            ],
            "properties": {
                "securityRules": [
                    {
                        "name": "allow_http",
                        "properties": {
                            "description": "Allow http traffic.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow_ssh_from_jumpbox",
                        "properties": {
                            "description": "Allow ssh trafic from single node in internal subnet",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "[reference(variables('jumpbox').ip.name).ipAddress]",
                            "destinationPortRange": "22",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2018-08-01",
            "name": "[variables('jumpbox').ip.name]",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "[variables('jumpbox').ip.name]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2018-08-01",
            "name": "[variables('vnet').name]",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('appSubnet').nsg.name)]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnet').prefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('gtwySubnet').name]",
                        "properties": {
                            "addressPrefix": "[variables('gtwySubnet').prefix]"
                        }
                    },
                    {
                        "name": "[variables('appSubnet').name]",
                        "properties": {
                            "addressPrefix": "[variables('appSubnet').prefix]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnet').nsg.name)]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Sql",
                                    "locations": [
                                        "[parameters('location')]"
                                    ]
                                }
                            ]
                        }
                    },
                    {
                        "name": "[variables('jumpbox').subnet.name]",
                        "properties": {
                            "addressPrefix": "[variables('jumpbox').subnet.prefix]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-08-01",
            "name": "[variables('jumpbox').nics.public]",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('jumpbox').ip.name)]",
                "[concat('Microsoft.Network/virtualNetworks/', variables('vnet').name)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "public-access",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses/', variables('jumpbox').ip.name)]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('vnet').name), '/subnets/', variables('jumpbox').subnet.name)]"
                            }
                        }
                    }
                ],
                "enableIPForwarding": true
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-08-01",
            "name": "[variables('jumpbox').nics.private]",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('jumpbox').ip.name)]",
                "[concat('Microsoft.Network/virtualNetworks/', variables('vnet').name)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "public-access",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[variables('jumpbox').ip.address]",
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('vnet').name), '/subnets/', variables('appSubnet').name)]"
                            }
                        }
                    }
                ],
                "enableIPForwarding": true
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2018-06-01",
            "name": "[variables('jumpbox').name]",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', variables('jumpbox').nics.public)]",
                "[concat('Microsoft.Network/networkInterfaces/', variables('jumpbox').nics.private)]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('jumpbox').vm.size]"
                },
                "osProfile": {
                    "computerName": "[variables('jumpbox').ip.name]",
                    "adminUsername": "[variables('jumpbox').vm.user]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[concat('/home/', variables('jumpbox').vm.user, '/.ssh/authorized_keys')]",
                                    "keyData": "[variables('jumpbox').vm.key]"
                                }
                            ]
                        }
                    }
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('jumpbox').vm.image.publisher]",
                        "offer": "[variables('jumpbox').vm.image.offer]",
                        "sku": "[variables('jumpbox').vm.image.sku]",
                        "version": "[variables('jumpbox').vm.image.version]"
                    },
                    "osDisk": {
                        "name": "[variables('jumpbox').vm.disk.name]",
                        "managedDisk": {
                            "storageAccountType": "[variables('jumpbox').vm.disk.type]"
                        },
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces/', variables('jumpbox').nics.public)]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces/', variables('jumpbox').nics.private)]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {
        "vnetName": {
            "type": "string",
            "value": "[variables('vnet').name]"
        },
        "appSubnetName": {
            "type": "string",
            "value": "[variables('appSubnet').name]"
        },
        "gtwySubnetName": {
            "type": "string",
            "value": "[variables('gtwySubnet').name]"
        },
        "jumpboxName": {
            "type": "string",
            "value": "[variables('jumpbox').name]"
        },
        "jumpboxPublicIpAddress": {
            "type": "string",
            "value": "[reference(variables('jumpbox').ip.name).ipAddress]"
        },
        "jumpboxPublicEndpoint": {
            "type": "string",
            "value": "[reference(variables('jumpbox').ip.name).dnsSettings.fqdn]"
        },
        "jumpboxDns": {
            "type": "string",
            "value": "[variables('jumpbox').ip.name]"
        },
        "sshUri": {
            "type": "string",
            "value": "[concat('ssh ', variables('jumpbox').vm.user, '@', reference(variables('jumpbox').ip.name).dnsSettings.fqdn)]"
        }
    }
}
